Joint T and P mixing matrix and cleaning
Changes include
 - Smoothing in sims defaults to false until we don't implements beams
   in the cleaning
 - `basic_comp_sep` can now have a set of components for T and one
   for P.
 - `comp_of_dB` (i.e. the slice of `s` involved in a particular derivative
   of the mixing matrixis) is now an IndexExrpession.
   In practice, s[..., comp_of_dB] is no longer valid, the Ellipsis has
   to be already in comp_of_dB.
   This turned out to be necessary in order to have a `comp_of_dB`
   making an arbitrary slicing. In particular, it now can specify a
   Stokes dimension in addition to the component dimension.
 - Style fixes in the modified files

--- a/example/separation.ipynb
+++ b/example/separation.ipynb
@@ -19,8 +19,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +33,7 @@
     "nside = 32\n",
     "sky = get_sky(nside, 'c1d0s0')\n",
     "instrument = get_instrument(nside, 'litebird')\n",
-    "freq_maps = instrument.observe(sky, write_outputs=False)[0][:, 1:, :] # Keep only polarization"
+    "freq_maps = instrument.observe(sky, write_outputs=False)[0]"
    ]
   },
   {
@@ -69,11 +68,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "from dustbuster.separation_recipies import basic_comp_sep\n",
-    "res = basic_comp_sep(components, instrument, freq_maps)"
+    "res = basic_comp_sep([components, components], instrument, freq_maps)"
    ]
   },
   {
