All dustbuster to fgbuster

--- a/example/separation.ipynb
+++ b/example/separation.ipynb
@@ -24,7 +24,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from dustbuster.pysm_helpers import get_instrument, get_sky\n",
+    "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
     "import healpy as hp\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dustbuster.component_model import CMB, Dust, Synchrotron\n",
+    "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
     "components = [CMB(), Dust(150.), Synchrotron(20.)]"
    ]
   },
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "from dustbuster.separation_recipies import basic_comp_sep\n",
+    "from fgbuster.separation_recipies import basic_comp_sep\n",
     "res = basic_comp_sep([components, components], instrument, freq_maps)"
    ]
   },
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "from dustbuster.visualization import corner_norm\n",
+    "from fgbuster.visualization import corner_norm\n",
     "print res.params\n",
     "corner_norm(res.x, res.Sigma, labels=res.params)"
    ]
