import fix in xF example

--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -18,7 +18,7 @@
     "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
     "import healpy as hp\n",
     "import numpy as np\n",
-    "from fgbuster.xForecast import xForecast\n",
+    "from fgbuster.cosmology import xForecast\n",
     "\n",
     "nside = 16\n",
     "# define sky and foregrounds simulations\n",
