Example fixed after dict instead of pysm

--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -36,6 +36,8 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
+    "import pysm\n",
     "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
     "import healpy as hp\n",
     "import numpy as np\n",
@@ -43,9 +45,9 @@
     "\n",
     "nside = 64\n",
     "# define sky and foregrounds simulations\n",
-    "sky = get_sky(nside, 'd0s0')\n",
+    "sky = pysm.Sky(get_sky(nside, 'd0s0'))\n",
     "# define instrument\n",
-    "instrument = get_instrument(nside, 'cmbs4')\n",
+    "instrument = pysm.Instrument(get_instrument(nside, 'cmbs4'))\n",
     "# get noiseless frequency maps\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
     "# take only the Q and U maps\n",
@@ -151,21 +153,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
