--- a/docs/source/examples/separation.ipynb
+++ b/docs/source/examples/separation.ipynb
@@ -18,6 +18,8 @@
     "%matplotlib inline\n",
     "\n",
     "import healpy as hp\n",
+    "import pysm\n",
+    "\n",
     "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
     "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
     "from fgbuster.separation_recipies import basic_comp_sep\n",
@@ -39,8 +41,8 @@
    "outputs": [],
    "source": [
     "nside = 32\n",
-    "sky = get_sky(nside, 'c1d0s0')\n",
-    "instrument = get_instrument(nside, 'litebird')\n",
+    "sky = pysm.Sky(get_sky(nside, 'c1d0s0'))\n",
+    "instrument = pysm.Instrument(get_instrument(nside, 'litebird'))\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
     "freq_maps = freq_maps[:, 1:]  # Select polarization"
    ]
