--- a/docs/source/examples/detailed_separation.ipynb
+++ b/docs/source/examples/detailed_separation.ipynb
@@ -9,23 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pylab import rcParams\n",
     "rcParams['figure.figsize'] = 12, 16\n",
     "\n",
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,17 +231,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimization started\n",
+      "Iter 1\tx = [ 1.4398246  21.99769057 -2.89355266]\tFirst -logL = -16985940133.598909\tN Eval = 3\tIter sec = 0.11\tCum sec = 0.11\n",
+      "Iter 2\tx = [ 1.50989349 21.99884214 -2.98531374]\tDelta(-logL) = -1057701.731297\tN Eval = 5\tIter sec = 0.06\tCum sec = 0.18\n",
+      "Iter 3\tx = [ 1.55090498 19.34011115 -2.98761519]\tDelta(-logL) = -7896.035320\tN Eval = 28\tIter sec = 0.73\tCum sec = 0.91\n",
+      "Iter 4\tx = [ 1.55429671 19.12649969 -2.98794622]\tDelta(-logL) = -225.203936\tN Eval = 31\tIter sec = 0.10\tCum sec = 1.00\n",
+      "Iter 5\tx = [ 1.55488811 19.1665438  -2.99317353]\tDelta(-logL) = -7575.652149\tN Eval = 34\tIter sec = 0.10\tCum sec = 1.10\n",
+      "Iter 6\tx = [ 1.55604803 19.19925028 -3.00062835]\tDelta(-logL) = -3999.849379\tN Eval = 35\tIter sec = 0.03\tCum sec = 1.13\n",
+      "Iter 7\tx = [ 1.55446186 19.28303095 -3.00078797]\tDelta(-logL) = -40.972971\tN Eval = 37\tIter sec = 0.07\tCum sec = 1.20\n",
+      "Iter 8\tx = [ 1.5514909  19.43188593 -3.00082058]\tDelta(-logL) = -74.497944\tN Eval = 38\tIter sec = 0.03\tCum sec = 1.23\n",
+      "Iter 9\tx = [ 1.5454242  19.73141536 -3.00063124]\tDelta(-logL) = -118.354958\tN Eval = 39\tIter sec = 0.03\tCum sec = 1.26\n",
+      "Iter 10\tx = [ 1.53762922 20.11698779 -3.00006902]\tDelta(-logL) = -32.499889\tN Eval = 40\tIter sec = 0.03\tCum sec = 1.30\n",
+      "Iter 11\tx = [ 1.54051523 19.97496814 -3.00009466]\tDelta(-logL) = -14.259094\tN Eval = 41\tIter sec = 0.03\tCum sec = 1.33\n",
+      "Iter 12\tx = [ 1.5400465  19.99815899 -3.00002228]\tDelta(-logL) = -0.717375\tN Eval = 42\tIter sec = 0.04\tCum sec = 1.37\n",
+      "Iter 13\tx = [ 1.5399583  20.00239066 -3.00000052]\tDelta(-logL) = -0.037298\tN Eval = 43\tIter sec = 0.03\tCum sec = 1.40\n",
+      "Iter 14\tx = [ 1.53997189 20.0016045  -2.99999947]\tDelta(-logL) = -0.002018\tN Eval = 44\tIter sec = 0.03\tCum sec = 1.43\n",
+      "Iter 15\tx = [ 1.53999905 20.0000565  -2.99999964]\tDelta(-logL) = -0.001421\tN Eval = 45\tIter sec = 0.03\tCum sec = 1.46\n",
+      "Iter 16\tx = [ 1.54000003 19.99999871 -2.99999994]\tDelta(-logL) = -0.000011\tN Eval = 46\tIter sec = 0.03\tCum sec = 1.50\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: -16987017813.413969\n",
+      "         Iterations: 16\n",
+      "         Function evaluations: 102\n",
+      "         Gradient evaluations: 90\n"
+     ]
+    }
+   ],
    "source": [
     "result = basic_comp_sep(components, instrument, freq_maps_simple,\n",
-    "                        #options=dict(disp=True),\n",
-    "                        #method='BFGS',\n",
-    "                        #method='Nelder-Mead',\n",
-    "                       )"
+    "                        options=dict(disp=True),\n",
+    "                        )"
    ]
   },
   {
@@ -255,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -389,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -413,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -498,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,16 +569,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.015545  , 0.0293815 , 0.04599306, 0.14535586, 0.17152282,\n",
+       "       0.31684787, 0.34807279, 0.56055079, 0.72833137])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "comp.eval(freq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,18 +601,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['beta_d', 'temp']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "comp_free.params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 9)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sed = comp_free.eval(freq, beta, temp)\n",
     "sed.shape"
@@ -583,16 +642,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-0.04462559, -0.07243335, -0.10015397, -0.20696011, -0.22513934,\n",
+       "        -0.28191042, -0.28647885, -0.26505112, -0.19522638]),\n",
+       " array([-0.00035632, -0.0006555 , -0.00099774, -0.00274123, -0.00312442,\n",
+       "        -0.00473026, -0.00496267, -0.00548072, -0.00451333])]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "comp_free.diff(freq, 1.6, 20.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,9 +674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.allclose(sed, \n",
