--- a/docs/source/examples/component_and_mixingmatrix.ipynb
+++ b/docs/source/examples/component_and_mixingmatrix.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `AnalyticComponenet`s\n",
+    "# `AnalyticComponenet`\n",
     "The `component_model` module collects classes for SED evaluation. It has mainly two classes:\n",
     "* `Component`, abstract class which defines the shared API\n",
     "    * Evaluation of the SED as well as its first and second order derivatives with respect to the free parameters\n",
@@ -64,9 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analytic_expr = ('(exp(nu0 / temp * h_over_k) -1)'\n",
+    "analytic_expr = ('(nu / nu0)**(1 + beta_d) *'\n",
+    "                 '(exp(nu0 / temp * h_over_k) -1)'\n",
     "                 '/ (exp(nu / temp * h_over_k) - 1)'\n",
-    "                 '* (nu / nu0)**(1 + beta_d)')"
+    "                 )"
    ]
   },
   {
@@ -107,10 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h_over_k_val = constants.h * 1e9 / constants.k\n",
+    "h_over_k_val = constants.h * 1e9 / constants.k  # Assumes frequencies in GHz\n",
     "nu0_val = 353.\n",
     "\n",
-    "comp = AnalyticComponent(analytic_expr, h_over_k=h_over_k_val, nu0=nu0_val)"
+    "comp = AnalyticComponent(analytic_expr,  # Same as before\n",
+    "                         h_over_k=h_over_k_val, nu0=nu0_val)  # but now keyword arguments fix some variables"
    ]
   },
   {
@@ -156,7 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nu_vector = np.linspace(40, 1000, 20)\n",
+    "nu_vector = np.logspace(1, 3, 20)\n",
+    "\n",
     "sed = comp.eval(nu_vector, beta_scalar, temp_scalar)\n",
     "\n",
     "print('Output shape is :', sed.shape)"
@@ -165,7 +168,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "_ = pl.loglog(nu_vector, sed)"
@@ -184,8 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta_vector = np.arange(1.2, 2.2, 0.3)\n",
-    "temp_vector = np.arange(15, 27, 3)\n",
+    "beta_vector = np.linspace(1.2, 2.2, 4)\n",
+    "temp_vector = np.linspace(15, 27, 4)\n",
+    "\n",
     "seds = comp.eval(nu_vector, beta_vector, temp_vector)\n",
     "\n",
     "print('Output shape is :', seds.shape)"
@@ -194,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "colors_map = cm.ScalarMappable()\n",
@@ -216,9 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sedss = comp.eval(nu_vector, beta_vector, temp_vector[:, np.newaxis])\n",
@@ -280,9 +287,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffs = comp.diff(nu_vector, 1.6, 20.)\n",
-    "for diff in diffs:\n",
-    "    pl.semilogx(nu_vector, diff)"
+    "diffs = comp.diff(nu_vector, 1.6, 20.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for diff, param in zip(diffs, comp.params):\n",
+    "    pl.semilogx(nu_vector, diff, label=param)\n",
+    "_ = pl.legend()"
    ]
   },
   {
@@ -356,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mixing_matrix = MixingMatrix(Dust(353.), CMB(), Synchrotron(30.))"
+    "mixing_matrix = MixingMatrix(Dust(353.), CMB(), Synchrotron(70.))"
    ]
   },
   {
@@ -381,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the `Component`s, it can be evaluated with"
+    "As the `Component`s, the SED and its derivative can be easily evaluated"
    ]
   },
   {
@@ -398,18 +414,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for sed, name in zip(mm_val.T, mixing_matrix.components):\n",
     "    pl.loglog(nu_vector, sed, label=name)\n",
     "_ = pl.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_diffs = mixing_matrix.diff(nu_vector, 1.6, 20., -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "for mm_diff, param in zip(mm_diffs, mixing_matrix.params):\n",
+    "    plot = pl.loglog(nu_vector, mm_diff, label=param)\n",
+    "    pl.loglog(nu_vector, -mm_diff, ls='--', c=plot[-1].get_color())\n",
+    "_ = pl.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that only the column affected by the derivative is reported in the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_diffs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each parameter, the index of the column affected can be retrieved from the `comp_of_dB` attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixing_matrix.comp_of_dB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The entry can be used to index a component vector before applying the component matrix. The presence of the `Ellipsis` allows to have arbitrary dimensions preceding the component one in the components vector."
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
