Examples structure improved

--- a/docs/source/examples/component_and_mixingmatrix.ipynb
+++ b/docs/source/examples/component_and_mixingmatrix.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example usage of the `Component` and `MixingMatrix` classes"
+    "# SED evaluation"
    ]
   },
   {
@@ -38,13 +38,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `AnalyticComponenet`\n",
+    "## `AnalyticComponenet`\n",
     "The `component_model` module collects classes for SED evaluation. It has mainly two classes:\n",
+    "\n",
     "* `Component`, abstract class which defines the shared API\n",
-    "    * Evaluation of the SED as well as its first and second order derivatives with respect to the free parameters\n",
-    "    * Keep track of the free parameters\n",
+    "\n",
+    "    - Evaluation of the SED as well as its first and second order derivatives with respect to the free parameters\n",
+    "    - Keep track of the free parameters\n",
+    "    \n",
     "* `AnalyticComponent`\n",
-    "    * Construct a `Component` from an analytic expression\n",
+    "    \n",
+    "    - Construct a `Component` from an analytic expression\n",
     "\n",
     "We'll now focus on the latter. \n",
     "An `AnalyticComponent` can be constructed from anything that can be parsed by `sympy`, which include all the most common mathematical functions. A variable called `nu` has to be used to expresses the frequency dependence."
@@ -54,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Construction\n",
+    "### Construction\n",
     "As an example, consider the SED of a modified back body"
    ]
   },
@@ -135,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation\n",
+    "### Evaluation\n",
     "Efficient evaluators of the analytic expression are created at construction time. The expression can be evaluated both for a single value and for an array of values. (Note that the free parameters are passed in the same order they appear in `comp.params`)"
    ]
   },
@@ -236,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "linewidths = lambda x: (x - temp_vector.min()) / 4. + 1\n",
@@ -277,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Derivatives\n",
+    "### Derivatives\n",
     "Another important feature of the `AnalyticComponent`s is that the derivatives with respect to the parameters are computed analytically at construction time and evaluate with respect to all the parameters using"
    ]
   },
@@ -305,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predefined Components\n",
+    "### Predefined Components\n",
     "Popular analytic SEDs are ready to be used. For example, we construct the very same `Component` we have been using above with"
    ]
   },
@@ -362,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mixing Matrix\n",
+    "## Mixing Matrix\n",
     "The mixing matrix allows to collect components and evaluate them"
    ]
   },
@@ -486,7 +492,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
