--- a/docs/source/examples/simple_separation.ipynb
+++ b/docs/source/examples/simple_separation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of simulated component separation"
+    "# Simple component separation"
    ]
   },
   {
