--- a/docs/source/examples/intermediate_separation.ipynb
+++ b/docs/source/examples/intermediate_separation.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylab import rcParams\n",
-    "rcParams['figure.figsize'] = 12, 16\n",
+    "import pylab\n",
+    "pylab.rcParams['figure.figsize'] = 12, 16\n",
     "\n",
     "import healpy as hp\n",
     "import pysm\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "source": [
     "### Spatially varying spectral indices\n",
-    "Let's prepare also maps with spatially varying spectral indices. Similarly to the simple case above we run the following (notice `d1s1`)"
+    "Let's prepare also maps with spatially varying spectral indices. Similarly to the simple case above, we run the following (notice `d1s1`)"
    ]
   },
   {
@@ -123,6 +123,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is how they look like in constant and varying case. The rightmost plot shows the full resolution `pysm` template."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -133,6 +140,13 @@
     "hp.mollview(sky_conf_simple[comp][0][param], sub=(1,3,1), title='Constant index')\n",
     "hp.mollview(sky_conf_vary[comp][0][param], sub=(1,3,2), title='Varying indices')\n",
     "hp.mollview(get_sky(NSIDE, 'c1d1s1')[comp][0][param], sub=(1,3,3), title='Full resolution indices')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now we generate the maps and select polarization"
    ]
   },
   {
@@ -189,7 +203,7 @@
    "outputs": [],
    "source": [
     "result = basic_comp_sep(components, instrument, freq_maps_simple,\n",
-    "                        options=dict(disp=True),\n",
+    "                        options=dict(disp=True),  # verbose output\n",
     "                        )"
    ]
   },
@@ -206,14 +220,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "inputs = [sky_conf_simple[comp][0][param][0]\n",
     "          for comp, param in [('dust', 'spectral_index'),\n",
     "                              ('dust', 'temp'),\n",
     "                              ('synchrotron', 'spectral_index')]\n",
     "         ]\n",
-    "\n",
+    "print(\"%-20s\\t%s\\t%s\" % ('', 'Estimated', 'Input'))\n",
     "for param, val, ref in zip(result.params, result.x, inputs):\n",
-    "    print(\"%s\\t%f\\t%f\" % (param, val, ref))"
+    "    print(\"%-20s\\t%f\\t%f\" % (param, val, ref))"
    ]
   },
   {
@@ -236,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The amplitudes of the components are stacked in the `s` attribute and they are in the same format of the input frequency maps: Q and U healpix maps, in this case."
+    "The amplitudes of the components are stacked in the `s` attribute and they are in the same format of the input frequency maps: Q and U healpix maps, in this case. Here is the U Stokes parameter for each of the components."
    ]
   },
   {
@@ -251,16 +266,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By taking the difference with the input template, we see that the error in the reconstruction is negligible."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(result.s[1,1] - \n",
-    "            sky_conf_simple['dust'][0]['A_U'] * pysm.convert_units('K_RJ', 'K_CMB', 353.),\n",
+    "hp.mollview(result.s[1,1] \n",
+    "            - sky_conf_simple['dust'][0]['A_U'] * pysm.convert_units('K_RJ', 'K_CMB', 353.),\n",
     "            title='Dust', norm='hist', sub=(1,2,1))\n",
-    "hp.mollview(result.s[2,1] - \n",
-    "            sky_conf_simple['synchrotron'][0]['A_U'] * pysm.convert_units('K_RJ', 'K_CMB', 23.), \n",
+    "hp.mollview(result.s[2,1] \n",
+    "            - sky_conf_simple['synchrotron'][0]['A_U'] * pysm.convert_units('K_RJ', 'K_CMB', 23.), \n",
     "            title='Synchrotron', norm='hist', sub=(1,2,2))"
    ]
   },
@@ -288,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The amplitudes of the components are stacked in the `s` attribute and they are in the same format of the input frequency maps: Q and U healpix maps, in this case."
+    "As in the previous case, the amplitudes of the components are stacked in the `s`."
    ]
   },
   {
@@ -308,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The amplitudes are recovered to high accuracy"
+    "When we take the difference with the input templates, the residuals are patchy. This is because the independent fit of the non-liner parameters has a different level of numerical accuracy for different patches. However, note that in all cases residuals are negligible: also this multi-patch cleaning has very high accuracy. "
    ]
   },
   {
@@ -329,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and also the spectral parameters"
+    "The same is true for the non-linear parameters. Here are their reconstructed maps."
    ]
   },
   {
@@ -342,6 +364,13 @@
    "source": [
     "for i, par in enumerate(result.params):\n",
     "    hp.mollview(result_vary.x[i], title=par, sub=(1,3,i+1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here is the difference with the input templates."
    ]
   },
   {
