--- a/docs/source/examples/intermediate_separation.ipynb
+++ b/docs/source/examples/intermediate_separation.ipynb
@@ -30,7 +30,7 @@
     "import healpy as hp\n",
     "import pysm\n",
     "\n",
-    "from fgbuster.pysm_helpers import get_instrument, get_sky  # Predefined instrumental and sky-creation configurations\n",
+    "from fgbuster.observation_helpers import get_instrument, get_sky  # Predefined instrumental and sky-creation configurations\n",
     "from fgbuster.visualization import corner_norm\n",
     "\n",
     "# Imports needed for component separation\n",
@@ -62,7 +62,7 @@
    "source": [
     "NSIDE = 64\n",
     "sky_conf_simple = get_sky(NSIDE, 'c1d0s0') \n",
-    "instrument = pysm.Instrument(get_instrument(NSIDE, 'cmbs4'))\n",
+    "instrument = pysm.Instrument(get_instrument('cmbs4', NSIDE))\n",
     "freq_maps_simple, noise = instrument.observe(pysm.Sky(sky_conf_simple), write_outputs=False)"
    ]
   },
