--- a/docs/source/examples/simple_separation.ipynb
+++ b/docs/source/examples/simple_separation.ipynb
@@ -20,7 +20,7 @@
     "import healpy as hp\n",
     "import pysm\n",
     "\n",
-    "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
+    "from fgbuster.observation_helpers import get_instrument, get_sky\n",
     "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
     "from fgbuster.separation_recipies import basic_comp_sep\n",
     "from fgbuster.visualization import corner_norm"
@@ -42,7 +42,7 @@
    "source": [
     "nside = 32\n",
     "sky = pysm.Sky(get_sky(nside, 'c1d0s0'))\n",
-    "instrument = pysm.Instrument(get_instrument(nside, 'litebird'))\n",
+    "instrument = pysm.Instrument(get_instrument('litebird', nside))\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
     "freq_maps = freq_maps[:, 1:]  # Select polarization"
    ]
