--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -17,16 +17,16 @@
     "%autoreload 2\n",
     "\n",
     "import pysm\n",
-    "from fgbuster.pysm_helpers import get_instrument, get_sky\n",
+    "from fgbuster.observation_helpers import get_instrument, get_sky\n",
     "import healpy as hp\n",
     "import numpy as np\n",
-    "from fgbuster.cosmology import xForecast\n",
+    "from fgbuster import xForecast, CMB, Dust, Synchrotron\n",
     "\n",
     "nside = 64\n",
     "# define sky and foregrounds simulations\n",
     "sky = pysm.Sky(get_sky(nside, 'd0s0'))\n",
     "# define instrument\n",
-    "instrument = pysm.Instrument(get_instrument(nside, 'cmbs4'))\n",
+    "instrument = pysm.Instrument(get_instrument('cmbs4', nside))\n",
     "# get noiseless frequency maps\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
     "# take only the Q and U maps\n",
@@ -61,7 +61,6 @@
    "outputs": [],
    "source": [
     "# define components used in the modeling\n",
-    "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
     "components = [CMB(), Dust(150.), Synchrotron(150.)]"
    ]
   },
