New comp_of_dB propagated and tested.

--- a/docs/source/examples/multi_res_separation.ipynb
+++ b/docs/source/examples/multi_res_separation.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from fgbuster.observation_helpers import get_instrument, get_sky\n",
     "from fgbuster import CMB, Dust, Synchrotron, MixingMatrix\n",
-    "import fgbuster.separation_recipies as sr"
+    "import fgbuster.separation_recipes as sr"
    ]
   },
   {
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "nside = 8\n",
+    "nside = 32\n",
     "sky = pysm.Sky(get_sky(nside, 'd0s0'))\n",
     "instrument = pysm.Instrument(get_instrument('litebird', nside))\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nsides = [4, 1, 2, 0]"
+    "nsides = [8, 1, 4, 0]"
    ]
   },
   {
