--- a/docs/source/examples/simple_separation.ipynb
+++ b/docs/source/examples/simple_separation.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from fgbuster.observation_helpers import get_instrument, get_sky\n",
     "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
-    "from fgbuster.separation_recipies import basic_comp_sep\n",
+    "from fgbuster.separation_recipes import basic_comp_sep\n",
     "from fgbuster.visualization import corner_norm"
    ]
   },
