--- a/docs/source/examples/component_and_mixingmatrix.ipynb
+++ b/docs/source/examples/component_and_mixingmatrix.ipynb
@@ -173,8 +173,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "scrolled": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -205,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "colors_map = cm.ScalarMappable()\n",
@@ -482,13 +479,6 @@
    "source": [
     "mixing_matrix.comp_of_dB"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The entry can be used to index a component vector before applying the component matrix. The presence of the `Ellipsis` allows to have arbitrary dimensions preceding the component one in the components vector."
-   ]
   }
  ],
  "metadata": {
@@ -507,9 +497,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
