--- a/docs/source/examples/multi_res_separation.ipynb
+++ b/docs/source/examples/multi_res_separation.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From more basic examples you know that `basic_comp_sep` allows you to tile the sky in healpix pixels at a given `nside` and perform the fit of the spectral parameters independently for each tile. However, you potentially want to fit different parameters at different resolutions. You can achieve this with the `multi_res_comp_sep` utility function in `separation_recipies`. Here is an example of how it works."
+    "From more basic examples you know that `basic_comp_sep` allows you to tile the sky in healpix pixels at a given `nside` and perform the fit of the spectral parameters independently for each tile. However, you potentially want to fit different parameters at different resolutions. You can achieve this with the `multi_res_comp_sep` utility function in `separation_recipes`. Here is an example of how it works."
    ]
   },
   {
@@ -49,8 +49,8 @@
    },
    "outputs": [],
    "source": [
-    "nside = 32\n",
-    "sky = pysm.Sky(get_sky(nside, 'd0s0'))\n",
+    "nside = 8\n",
+    "sky = pysm.Sky(get_sky(nside, 'c1d0s0'))\n",
     "instrument = pysm.Instrument(get_instrument('litebird', nside))\n",
     "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
     "freq_maps = freq_maps[:, 1:]  # Select polarization"
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nsides = [8, 1, 4, 0]"
+    "nsides = [4, 1, 2, 0]"
    ]
   },
   {
@@ -126,6 +126,13 @@
    "outputs": [],
    "source": [
     "result = sr.multi_res_comp_sep(components, instrument, freq_maps, nsides=nsides)#, method='L-BFGS-B', options=dict(disp=True))                                                                                                                ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that all the parameters are fitted simultaneously. This makes the maximization of the likelihood substantially more difficult. Consider tuning the parameters of the minimizer [`scipy.optimize.minimize`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)"
    ]
   },
   {
@@ -175,9 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hp.mollview(result.s[0,0], title='CMB Q out', sub=(1, 3, 1))\n",
@@ -231,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
