--- a/docs/source/examples/simple_separation.ipynb
+++ b/docs/source/examples/simple_separation.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from fgbuster.observation_helpers import get_instrument, get_sky\n",
     "from fgbuster.component_model import CMB, Dust, Synchrotron\n",
-    "from fgbuster.separation_recipies import basic_comp_sep\n",
+    "from fgbuster.separation_recipes import basic_comp_sep\n",
     "from fgbuster.visualization import corner_norm"
    ]
   },
@@ -138,25 +138,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
