--- a/docs/source/examples/multi_res_separation.ipynb
+++ b/docs/source/examples/multi_res_separation.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that all the parameters are fitted simultaneously. This makes the maximization of the likelihood substantially more difficult. Consider tuning the parameters of the minimizer [`scipy.optimize.minimize`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)"
+    "Note that all the parameters are fitted simultaneously. This makes the maximization of the likelihood substantially more difficult. Consider tuning the parameters of the minimizer [``scipy.optimize.minimize``](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "metadata": {},
    "source": [
     "## Explore the results\n",
-    "Unlike `basic_comp_sep`, `res.x` is now a list — since the maps have different resolutions you can not stack them in an `ndarray` — but you access the maps on each parameters in the same way. "
+    "Unlike `basic_comp_sep`, `res.x` is now a list — since the maps have different resolutions you can not stack them in an `ndarray` — but you access the maps of each parameters in the same way. "
    ]
   },
   {
@@ -154,20 +154,6 @@
     "        hp.mollview(par_x, title=par)\n",
     "    else:\n",
     "        print(par, par_x[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also have a look at their semi-analytic covariance, but remember that it is accurate only the high signal-to-noise regime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "corner_norm(result.x, result.Sigma, labels=result.params)"
    ]
   },
   {
@@ -211,16 +197,27 @@
     "hp.mollview(sky.synchrotron(70.)[1], title='Dust Q in', sub=(1, 3, 2))\n",
     "hp.mollview(result.s[2, 0] - sky.synchrotron(70.)[1]*pysm.convert_units('K_RJ', 'K_CMB', 70.), title='Dust Q diff', sub=(1, 3, 3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
