--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -17,18 +17,18 @@
     "%autoreload 2\n",
     "\n",
     "import pysm\n",
-    "from fgbuster.observation_helpers import get_instrument, get_sky\n",
+    "from fgbuster import get_instrument, get_sky, get_observation\n",
     "import healpy as hp\n",
     "import numpy as np\n",
     "from fgbuster import xForecast, CMB, Dust, Synchrotron\n",
     "\n",
     "nside = 64\n",
     "# define sky and foregrounds simulations\n",
-    "sky = pysm.Sky(get_sky(nside, 'd0s0'))\n",
+    "sky = get_sky(nside, 'd0s0')\n",
     "# define instrument\n",
-    "instrument = pysm.Instrument(get_instrument('cmbs4', nside))\n",
+    "instrument = get_instrument('SO_SAT')\n",
     "# get noiseless frequency maps\n",
-    "freq_maps = instrument.observe(sky, write_outputs=False)[0]\n",
+    "freq_maps = get_observation(instrument, sky)\n",
     "# take only the Q and U maps\n",
     "freq_maps = freq_maps[:,1:]"
    ]
@@ -79,7 +79,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
