--- a/docs/source/examples/intermediate_separation.ipynb
+++ b/docs/source/examples/intermediate_separation.ipynb
@@ -29,8 +29,8 @@
     "pylab.rcParams['figure.figsize'] = 12, 16\n",
     "\n",
     "import healpy as hp\n",
-    "import pysm\n",
-    "import pysm.units as u\n",
+    "import pysm3\n",
+    "import pysm3.units as u\n",
     "\n",
     "from fgbuster import get_instrument, get_sky, get_observation  # Predefined instrumental and sky-creation configurations\n",
     "from fgbuster.visualization import corner_norm\n",
