--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -16,7 +16,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import pysm\n",
+    "import pysm3\n",
     "from fgbuster import get_instrument, get_sky, get_observation\n",
     "import healpy as hp\n",
     "import numpy as np\n",
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
