--- a/docs/source/examples/multi_res_separation.ipynb
+++ b/docs/source/examples/multi_res_separation.ipynb
@@ -22,33 +22,15 @@
     "pylab.rcParams['figure.figsize'] = 12, 16\n",
     "\n",
     "import healpy as hp\n",
-    "import pysm\n",
-    "import pysm.units as u\n",
+    "import pysm3\n",
+    "import pysm3.units as u\n",
     "\n",
     "from fgbuster import get_instrument, get_sky, get_observation  # Predefined instrumental and sky-creation configurations\n",
     "import fgbuster.separation_recipes as sr\n",
-    "from fgbuster.visualization import corner_norm\n",
     "\n",
     "# Imports needed for component separation\n",
     "from fgbuster import (CMB, Dust, Synchrotron,  # sky-fitting model\n",
     "                      MixingMatrix)  # separation routine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "import healpy as hp\n",
-    "import pysm\n",
-    "\n",
-    "from fgbuster.observation_helpers import get_instrument, get_sky\n",
-    "from fgbuster import CMB, Dust, Synchrotron, MixingMatrix\n",
-    "import fgbuster.separation_recipes as sr"
    ]
   },
   {
@@ -241,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
