--- a/docs/source/examples/simple_separation.ipynb
+++ b/docs/source/examples/simple_separation.ipynb
@@ -18,7 +18,7 @@
     "%matplotlib inline\n",
     "\n",
     "import healpy as hp\n",
-    "import pysm\n",
+    "import pysm3\n",
     "\n",
     "from fgbuster import (CMB, Dust, Synchrotron, \n",
     "                      basic_comp_sep, \n",
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
