enable some pyupgrade rules

--- a/docs/source/examples/xForecast.ipynb
+++ b/docs/source/examples/xForecast.ipynb
@@ -46,9 +46,9 @@
     "mask_circular = np.zeros(12*nside**2)\n",
     "for ipix in range(12*nside**2):\n",
     "    theta, phi = hp.pix2ang(nside, ipix)\n",
-    "    if (((phi - RA)**2 + (theta - DEC)**2 <= radius**2)):\n",
+    "    if ((phi - RA)**2 + (theta - DEC)**2 <= radius**2):\n",
     "        mask_circular[ipix] = 1.0\n",
-    "    if (((phi - RA+2*np.pi)**2 + (theta - DEC)**2 <= radius**2)):\n",
+    "    if ((phi - RA+2*np.pi)**2 + (theta - DEC)**2 <= radius**2):\n",
     "        mask_circular[ipix] = 1.0\n",
     "# applying mask to observed frequency maps\n",
     "freq_maps[...,mask_circular==0] = 0.0"
